fixed nav jump

--- a/style.css
+++ b/style.css
@@ -1,80 +1,126 @@
 html {
-  /*background-image: url("~wdi/projects/portfolio/images/snow.png") center center cover no-repeat;*/
-  /*background: #111a24;*/
-  /*background-color: #111a24;*/
-  /*background-image: url("https://www.transparenttextures.com/patterns/snow.png");*/
+  background-color: #F4F4E3;
+  background-image: url(images/snow.png)
+  /*text-transform: uppercase;*/
+  /*font-family: 'Athiti', sans-serif;*/
+  /*font-family: 'Orbitron', sans-serif;*/
+  /*font-family: 'Julius Sans One', sans-serif;*/
+  /*font-family: 'Syncopate', sans-serif;*/
 }
 
 body {
   display: flex;
-  flex-direction: column;
-  margin: 0;
+  flex-direction: row;
+  justify-content: center;
 }
-
-/*#bg-image {
-  background-image: url(bg_pattern.png);
-  position: fixed;
-  opacity: 0.8;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}*/
 
 .container {
-  margin: auto;
-  width: 1050px;
-  /*background: black;*/
-  height: 100%;
-}
-
-.test {
-  height: 200px;
-  width: 200px;
-  background-color: #111a24;
+  width: 1000px;
 }
 
 nav {
+  font-family: 'Tenali Ramakrishna', sans-serif;
+  font-weight: 600;
+  font-size: 24px;
+  width: 45%;
+  height: 7%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: stretch;
-  width: 500px;
-  color: white;
-  margin: 0 0 10px 20px;
+  align-items: center;
+  margin: 5px 0 5px 0;
 }
 
-a {
-  color: white;
-  text-decoration: white;
-  padding: 15px 40px 20px 30px;
-  box-shadow: inset 0px -2px 1px rgba(250,250,250,0.8);
-  flex-grow: 5;
+nav a {
+  border: 2px solid transparent;
+  text-decoration: none;
+  color: #393C3E;
+  text-transform: uppercase;
+  padding: 7px 0 0 0;
+  margin: 1px;
 }
 
-#fun {
-  flex-grow: 2;
+nav a:hover {
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  color: #64686B;
+  /* find a grey-ish color */
+  border-radius: 50%;
+  transition: color 2s linear .5s, border-radius 2s linear .5s;
 }
+
+nav a:active {
+  color: white;
+}
+
+/* header */
 
 header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
+  justify-content: space-around;
+  align-items: center;
 }
 
 h1 {
-  font-size: 62px;
-  color: white;
-  font-family: sans-serif;
+  font-size: 36px;
+  text-transform: uppercase;
+  font-family: 'Syncopate', sans-serif;
+  font-weight: 700;
+  letter-spacing: 5px;
+  color: #364149, black;
+}
+h4 {
+  font-size: 24px;
+  font-family: 'Julius Sans One', sans-serif;
 }
 
-img {
-  display: block;
-  margin: auto 25px auto 75px;
+.profile-pic {
   border-radius: 50%;
-  border: 4px solid grey;
-  height: 200px;
-  width: 200px;
+  border: 3px solid #435961;
+  height: 175px;
+  margin: auto 50px auto 0;
+}
+
+/* Who */
+
+/* Projects */
+
+/* CV */
+.download-btn {
+  border: 2px solid black;
+  background-color: white;
+
+  /* find colors */
+}
+
+/* Footer */
+/* Contact Me */
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.icon-list {
+  padding: 30px 20px;
+  display: flex;
+  flex-direction: row;
+  width: 40%;
+  justify-content: space-around;
+  margin-right: 50px;
+}
+
+.icons {
+  height: 25px;
+}
+
+.fb-icon {
+  height: 27px;
+}
+
+.steam-icon {
+  height: 20px;
+  border: 2px solid black;
+  border-radius: 50%;
 }
